--- a/算法/状态空间搜索问题/迷宫算法.ipynb
+++ b/算法/状态空间搜索问题/迷宫算法.ipynb
@@ -12,8 +12,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-11-21T14:01:47.870154Z",
-     "start_time": "2019-11-21T14:01:47.822152Z"
+     "end_time": "2019-11-23T12:23:55.808668Z",
+     "start_time": "2019-11-23T12:23:55.773670Z"
     }
    },
    "outputs": [
@@ -95,8 +95,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-11-21T14:01:48.033185Z",
-     "start_time": "2019-11-21T14:01:47.878153Z"
+     "end_time": "2019-11-23T12:23:56.152665Z",
+     "start_time": "2019-11-23T12:23:55.813674Z"
     }
    },
    "outputs": [],
@@ -116,8 +116,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-11-21T14:01:48.170162Z",
-     "start_time": "2019-11-21T14:01:48.050159Z"
+     "end_time": "2019-11-23T12:23:56.336670Z",
+     "start_time": "2019-11-23T12:23:56.156664Z"
     }
    },
    "outputs": [],
@@ -136,8 +136,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-11-21T14:01:48.287161Z",
-     "start_time": "2019-11-21T14:01:48.183160Z"
+     "end_time": "2019-11-23T12:23:56.457669Z",
+     "start_time": "2019-11-23T12:23:56.339675Z"
     }
    },
    "outputs": [
@@ -183,8 +183,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-11-21T14:01:48.403159Z",
-     "start_time": "2019-11-21T14:01:48.293157Z"
+     "end_time": "2019-11-23T12:23:56.585662Z",
+     "start_time": "2019-11-23T12:23:56.461667Z"
     }
    },
    "outputs": [],
@@ -204,8 +204,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-11-21T14:01:48.515179Z",
-     "start_time": "2019-11-21T14:01:48.413160Z"
+     "end_time": "2019-11-23T12:23:56.727664Z",
+     "start_time": "2019-11-23T12:23:56.588665Z"
     }
    },
    "outputs": [],
@@ -245,8 +245,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-11-21T14:01:48.625170Z",
-     "start_time": "2019-11-21T14:01:48.528162Z"
+     "end_time": "2019-11-23T12:23:56.864668Z",
+     "start_time": "2019-11-23T12:23:56.731674Z"
     }
    },
    "outputs": [
@@ -267,8 +267,8 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-11-21T14:01:48.746150Z",
-     "start_time": "2019-11-21T14:01:48.636168Z"
+     "end_time": "2019-11-23T12:23:57.005670Z",
+     "start_time": "2019-11-23T12:23:56.871669Z"
     }
    },
    "outputs": [
@@ -320,11 +320,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-11-21T14:15:57.977513Z",
-     "start_time": "2019-11-21T14:15:57.957510Z"
+     "end_time": "2019-11-23T12:23:57.142660Z",
+     "start_time": "2019-11-23T12:23:57.010664Z"
     }
    },
    "outputs": [],
@@ -379,11 +379,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-11-21T14:15:58.337511Z",
-     "start_time": "2019-11-21T14:15:58.325522Z"
+     "end_time": "2019-11-23T12:23:57.270670Z",
+     "start_time": "2019-11-23T12:23:57.146666Z"
     }
    },
    "outputs": [
@@ -420,6 +420,274 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "这个迷宫算法的队列实现部分，找到出口后，最好的保存路线方法不是字典，而是树吧。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-11-23T12:23:57.415686Z",
+     "start_time": "2019-11-23T12:23:57.277667Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# 我重新组织一下用队列实现的迷宫算法\n",
+    "# 首先我从总体上实现这个算法"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-11-22T12:44:20.863784Z",
+     "start_time": "2019-11-22T12:44:20.856777Z"
+    }
+   },
+   "source": [
+    "将start标记为已达  \n",
+    "start入队  \n",
+    "while 队列里还有未充分探查的位置  \n",
+    "&emsp;&emsp;取出一个位置pos  \n",
+    "&emsp;&emsp;检查pos的相邻位置  \n",
+    "&emsp;&emsp;&emsp;&emsp;遇到end成功结束  \n",
+    "&emsp;&emsp;&emsp;&emsp;尚未探查的都mark并入队  \n",
+    "队列空，探索失败"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-11-23T12:23:57.550664Z",
+     "start_time": "2019-11-23T12:23:57.418670Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "找到出口\n"
+     ]
+    }
+   ],
+   "source": [
+    "def maze_solver_queue(maze, start, end):\n",
+    "    # 特殊情况，开头就是结尾\n",
+    "    if start == end:\n",
+    "        print(\"开头就是结尾\")\n",
+    "        return\n",
+    "    qu = Queue() # g构造队列\n",
+    "    mark(maze,start)  # 做标记\n",
+    "    qu.put(start) # start位置入队列\n",
+    "    while not qu.empty():  # 还有候选位置\n",
+    "        pos = qu.get()  # 取出下一个位置\n",
+    "        for _next_pos in next_pos(maze,pos):  # 遍历所有点\n",
+    "            if possable(maze,_next_pos):  # 判断可行，我这个是做成2步的，一步是上边取得所有邻居，这步是检查是否可行\n",
+    "                if _next_pos == end:  # 是出口\n",
+    "                    print(\"找到出口\")\n",
+    "                    return\n",
+    "                mark(maze,_next_pos) # 标记这个位置，这个是尚未探查的都做标记，\n",
+    "                qu.put(_next_pos)  # 这个位置入队列\n",
+    "    print(\"没有找到路线\")\n",
+    "maze_solver_queue(copy.deepcopy(map_data),[1,1],[8,10])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-11-23T12:23:57.727663Z",
+     "start_time": "2019-11-23T12:23:57.554673Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# 上边的并没有看到路线，而只是判断是否有路线而已，我下边要添加要保存路线的版本"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "将start标记为已达  \n",
+    "start入队  \n",
+    "while 队列里还有未充分探查的位置  \n",
+    "&emsp;&emsp;取出一个位置pos  \n",
+    "&emsp;&emsp;检查pos的相邻位置  \n",
+    "&emsp;&emsp;&emsp;&emsp;**保存状态信息，就是这个路径和下一个路径**  \n",
+    "&emsp;&emsp;&emsp;&emsp;遇到end成功结束  \n",
+    "&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;**遇到end后调用一个函数，返回相关状态**  \n",
+    "&emsp;&emsp;&emsp;&emsp;尚未探查的都mark并入队  \n",
+    "队列空，探索失败"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-11-23T12:23:57.868664Z",
+     "start_time": "2019-11-23T12:23:57.732665Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# 这个部分我写怎么保存状态以及返回状态的函数\n",
+    "# 我这里用树来保存相关的状态吧\n",
+    "# 以后实现吧，我还没有学习树呢\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 回溯法实现的迷宫算法"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "这种算法在工作中执行两种基本操作  \n",
+    "- **前进**  \n",
+    "   - 条件 ： 当前位置存在尚未探查的四邻位置  \n",
+    "   - 操作 ： 选择下一个位置向前探查。如果还存在其他可能的探查分支，就记录相关信息，以便将来使用。  \n",
+    "      - 如果找到出口，则成功结束  \n",
+    "- **后退**（回溯）  \n",
+    "   - 条件 ： 遇到死路，不存在尚未探查的四邻位置。  \n",
+    "   - 操作 ： 退回最近记录的那个分支点，检查那里是否还存在为探查的分支，如果有，就取一个尚未探查的邻位置作为当前位置前近，没有就将其删除并继续回溯。  \n",
+    "   - 已经穷尽所有可能，不能找到出口时以失败结束  \n",
+    "可以应用回溯法的共性是从一个出发点开始，设法找到目标，都需要一个栈，搜索的行为分为向前搜索和向后搜索，下边是回溯法的典型实现。  \n",
+    "- 首先把出发点压入栈中  \n",
+    "- 在栈不为空的情况下，反复做如下几个操作，栈为空以失败结束。  \n",
+    "   - 弹出一项以前保存的信息，作为当前点。  \n",
+    "   - 检查从这里出发前近的可能性，找到下一个探查点  \n",
+    "   - 如果可以向前，存在下一个可行位置  \n",
+    "      - 把当前位置点的其他可能压入栈  \n",
+    "      - 把下一个探查点也压入栈\n",
+    "         - 注意： 由于已经将下一个探查点压入栈，下次迭代自然会将其取出使用。如果当前点不存在前近可能，算法将直接转入到下一次迭代，弹出更早保存的点（就是回溯），而找到（并压入）下一探查点就是前近。  \n",
+    " \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "迷宫算法框架 \n",
+    "- 入口相关信息（位置和尚未探查的方向）入栈  \n",
+    "- while 栈不空 \n",
+    "  - 弹出栈顶元素作为当前位置继续搜索  \n",
+    "  - while 当前位置存在尚未探查的方向  \n",
+    "     - 求出下一个探查位置 nextp\n",
+    "     - if nextp 是出口 \n",
+    "        - 输出路径并结束\n",
+    "     - if nextp 尚未探查：\n",
+    "        - 将当前位置和nextp顺序入栈并退出内层循环。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-11-23T12:23:58.033669Z",
+     "start_time": "2019-11-23T12:23:57.871664Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "找到路径\n",
+      "[([1, 1], 1), ([1, 2], 1), ([1, 3], 2), ([2, 3], 2), ([3, 3], 2), ([4, 3], 1), ([4, 4], 1), ([4, 5], 1), ([4, 6], 4), ([3, 6], 4), ([2, 6], 1), ([2, 7], 1), ([2, 8], 1), ([2, 9], 2), ([3, 9], 2), ([4, 9], 2), ([5, 9], 2), ([6, 9], 2), ([7, 9], 2)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 我这个栈暂时用列表实现吧，\n",
+    "dirs=[(0,1),(1,0),(0,-1),(-1,0)]  # 四邻，方便计算的\n",
+    "def maze_solver_huisu(maze,start,end):\n",
+    "    if start == end:\n",
+    "        print(\"开始就是结束啦，这种情况很少\")\n",
+    "        return\n",
+    "    stack = []  # 我这里用python的列表实现栈吧，append和pop\n",
+    "    mark(maze,start)  # 标记位置\n",
+    "    stack.append((start,0))  # 起始点入栈\n",
+    "    while len(stack) > 0:\n",
+    "        pos,nxt = stack.pop()  # 取出栈顶和探查方向\n",
+    "        # 下边是探查四个邻居\n",
+    "        for i in range(nxt,4):\n",
+    "            nextp = [pos[0]+dirs[i][0],pos[1]+dirs[i][1]]\n",
+    "            if nextp == end: \n",
+    "                print(\"找到路径\")\n",
+    "                print(stack)  # 打印这个列表啦，这里边就是路径。\n",
+    "                return \n",
+    "            if possable(maze,nextp):  # 遇到未查探的位置\n",
+    "                stack.append((pos,i+1))  # 原位置和下一个方向入栈\n",
+    "                mark(maze,nextp)  #\n",
+    "                stack.append((nextp,0))  # 新位置入栈\n",
+    "                break\n",
+    "    print(\"没有找到路径\")\n",
+    "     \n",
+    "maze_solver_huisu(copy.deepcopy(map_data),[1,1],[8,10])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 递归法、回溯法和队列法的区别"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "递归法算法过程  \n",
+    "- 将当前位置记录已经验证  \n",
+    "- 检查当前位置是否为出口，如果是则成功结束  。\n",
+    "- 逐个检查当前位置的四邻，是否可以通过到达出口，（这个是递归调用自身）  \n",
+    "- 如果对四邻的搜索都失败，那么报告失败  \n",
+    "\n",
+    "回溯算法框架 \n",
+    "- 入口相关信息（位置和尚未探查的方向）入栈  \n",
+    "- while 栈不空 \n",
+    "  - 弹出栈顶元素作为当前位置继续搜索  \n",
+    "  - while 当前位置存在尚未探查的方向  \n",
+    "     - 求出下一个探查位置 nextp\n",
+    "     - if nextp 是出口 \n",
+    "        - 输出路径并结束\n",
+    "     - if nextp 尚未探查：\n",
+    "        - 将当前位置和nextp顺序入栈并退出内层循环。  \n",
+    "- 回溯法的路线就是堆栈中的内容。\n",
+    "\n",
+    "回溯法，就是保存一个当前位置以及四邻的方向上的坐标（如果可行的话），下一次循环会取出这个四邻方向上的坐标，以这个坐标当作当前的点，再次判断四邻，如果这里都不可行，这时候堆栈的栈顶位置就是上上次的当前位置和某个方向了。\n",
+    "\n",
+    "\n",
+    "队列框架  \n",
+    "将start标记为已达  \n",
+    "start入队  \n",
+    "while 队列里还有未充分探查的位置  \n",
+    "&emsp;&emsp;取出一个位置pos  \n",
+    "&emsp;&emsp;检查pos的相邻位置  \n",
+    "&emsp;&emsp;&emsp;&emsp;遇到end成功结束  \n",
+    "&emsp;&emsp;&emsp;&emsp;尚未探查的都mark并入队  \n",
+    "队列空，探索失败  \n",
+    "\n",
+    "**三种其实都是往一个数据结构中保存路线，不同的是，递归法和回溯法是保存在堆栈中，而队列法是保存在队列中，堆栈和队列的操作不同造成了几个的不同。堆栈是先进后出，所以不断从堆栈出来的会是越来越远的点，沿着一条路走下去，或者在一个区域内搜索完毕才知道这个区域是否有道路，而队列是先进先出，所以会优先将周边搜索完，一层一层的向外搜索。**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -432,6 +700,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.3"
   },
   "toc": {
    "nav_menu": {},
