new:usr:残差神经网络添加代码

--- a/机器学习/残差神经网络.ipynb
+++ b/机器学习/残差神经网络.ipynb
@@ -108,6 +108,143 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# 源代码"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-06-13T02:03:45.385826Z",
+     "iopub.status.busy": "2020-06-13T02:03:45.385826Z",
+     "iopub.status.idle": "2020-06-13T02:04:48.663075Z",
+     "shell.execute_reply": "2020-06-13T02:04:48.662111Z",
+     "shell.execute_reply.started": "2020-06-13T02:03:45.385826Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# 先导入一堆的库\n",
+    "import  tensorflow as tf\n",
+    "from    tensorflow import keras\n",
+    "from    tensorflow.keras import layers, Sequential\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-06-13T02:40:10.385903Z",
+     "iopub.status.busy": "2020-06-13T02:40:10.384897Z",
+     "iopub.status.idle": "2020-06-13T02:40:10.435892Z",
+     "shell.execute_reply": "2020-06-13T02:40:10.433883Z",
+     "shell.execute_reply.started": "2020-06-13T02:40:10.385903Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# 图形中，我们可以将这个神经网络分成不同的块，就是如下的\n",
+    "\n",
+    "\n",
+    "class BasicBlock(layers.Layer):\n",
+    "    \"\"\"这个继承自Layer的，是单独的一个Layer\"\"\"\n",
+    "    \n",
+    "    def __init__(self, filter_num, stride=1):\n",
+    "        super(BasicBlock, self).__init__() #  调用父类的\n",
+    "        \n",
+    "        # 这个类有两个卷积\n",
+    "        self.conv1 = layers.Conv2D(filter_num, (3, 3), strides=stride, padding='same')\n",
+    "        self.bn1 = layers.BatchNormalization()  # 批量规范化 该层在每个batch上将前一层的激活值重新规范化，即使得其输出数据的均值接近0，其标准差接近1\n",
+    "        self.relu = layers.Activation('relu')   # 激活函数\n",
+    " \n",
+    "        self.conv2 = layers.Conv2D(filter_num, (3, 3), strides=1, padding='same')\n",
+    "        self.bn2 = layers.BatchNormalization()\n",
+    " \n",
+    "        # 判断移动步长的\n",
+    "        if stride != 1:\n",
+    "            self.downsample = Sequential()\n",
+    "            self.downsample.add(layers.Conv2D(filter_num, (1, 1), strides=stride))\n",
+    "            #self.downsample = layers.Conv2D(filter_num, (1,1), strides = stride)\n",
+    "        else:\n",
+    "            self.downsample = lambda x:x\n",
+    "    def call(self, inputs, training=None):\n",
+    " \n",
+    "        # [b, h, w, c]\n",
+    "        # 如下是构造残差神经网络，\n",
+    "        out = self.conv1(inputs) # 先卷积\n",
+    "        out = self.bn1(out)      # 然后批量规范化\n",
+    "        out = self.relu(out)     # 然后激活函数\n",
+    " \n",
+    "        out = self.conv2(out)    # 再卷积\n",
+    "        out = self.bn2(out)      # 再批量规范化\n",
+    " \n",
+    "        identity = self.downsample(inputs)  # 将input转成跟out相同的维度\n",
+    " \n",
+    "        output = layers.add([out, identity])  # 相加\n",
+    "        output = tf.nn.relu(output)           # 激活函数\n",
+    " \n",
+    "        return output\n",
+    "\n",
+    "\n",
+    "# 然后构造总体的残差神经网络\n",
+    "\n",
+    "class ResNet(keras.Model):\n",
+    "    \"\"\"残差神经网络类，是一个模型\"\"\"\n",
+    " \n",
+    "    def __init__(self, layer_dims, num_classes=100): # [2, 2, 2, 2]\n",
+    "        super(ResNet, self).__init__()\n",
+    "        # 做一个\n",
+    "        self.stem = Sequential([layers.Conv2D(64, (3, 3), strides=(1, 1)),\n",
+    "                                layers.BatchNormalization(),\n",
+    "                                layers.Activation('relu'),\n",
+    "                                layers.MaxPool2D(pool_size=(2, 2), strides=(1, 1), padding='same')\n",
+    "                                ])\n",
+    " \n",
+    "        self.layer1 = self.build_resblock(64,  layer_dims[0])\n",
+    "        self.layer2 = self.build_resblock(128, layer_dims[1], stride=2)\n",
+    "        self.layer3 = self.build_resblock(256, layer_dims[2], stride=2)\n",
+    "        self.layer4 = self.build_resblock(512, layer_dims[3], stride=2)\n",
+    " \n",
+    "        # output: [b, 512, h, w],\n",
+    "        self.avgpool = layers.GlobalAveragePooling2D()\n",
+    "        self.fc = layers.Dense(num_classes)\n",
+    " \n",
+    "    def build_resblock(self, filter_num, blocks, stride=1):\n",
+    " \n",
+    "        res_blocks = Sequential()\n",
+    "        # may down sample\n",
+    "        res_blocks.add(BasicBlock(filter_num, stride))\n",
+    "        # 每一块有多少个\n",
+    "        for _ in range(1, blocks):\n",
+    "            res_blocks.add(BasicBlock(filter_num, stride=1))\n",
+    " \n",
+    "        return res_blocks\n",
+    " \n",
+    "    def call(self, inputs, training=None):\n",
+    " \n",
+    "        x = self.stem(inputs)\n",
+    " \n",
+    "        x = self.layer1(x)\n",
+    "        x = self.layer2(x)\n",
+    "        x = self.layer3(x)\n",
+    "        x = self.layer4(x)\n",
+    " \n",
+    "        # [b, c]\n",
+    "        x = self.avgpool(x)\n",
+    "        # [b, 100]\n",
+    "        x = self.fc(x)\n",
+    " \n",
+    "        return x\n",
+    "def resnet18():\n",
+    "    return ResNet([2, 2, 2, 2])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# 引用\n",
     "\n",
     ">[残差神经网络ResNet系列网络结构详解：从ResNet到DenseNet](https://blog.csdn.net/weixin_44936889/article/details/103774753)"
