--- a/数据结构/数据结构总览.ipynb
+++ b/数据结构/数据结构总览.ipynb
@@ -37,6 +37,9 @@
     "   - [最小生成树](./最小生成树.ipynb)\n",
     "      - Kruskal算法 克鲁斯克尔算法 : 初始T = (V, {})，然后不断选取权值最小的边，当且仅当这个边的两个顶点属于T的不同连通分量\n",
     "      - Prim算法 普里姆算法 ： 图G=(V,E),顶点集合U，边集合$E_{new}$，然后筛选边（这个边的一个顶点在U,而另一个在V-U)，选出权重最小的边，将顶点加入U，边加入$E_{new}$。\n",
+    "      - 两种算法区别 ： \n",
+    "         - kruskal : 加边法，初始边为空，每次都加最小的边。\n",
+    "         - prim : 加点法，初始点为空，每次都加代价最小的边对应的点。\n",
     "   - [最短路径](./最短路径.opynb)\n",
     "      - 单源点最短路径Dijkstra算法 : 图G=(V,E)，将图的顶点分成两部分，一部分是知道最短路径的顶点集合U，而另一部分是V-U，不断的添加最短路径的顶到到U中，然后更新因为新顶点加入而导致的V-U中顶点的最短路径更新。\n",
     "      - 任意顶点间最短路径的Floyd算法 ： $A_{k+1}[i][j]=min\\{A_k[i][j], A_k[i][k]+A_k[k][j]\\}$\n",
@@ -87,7 +90,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.6"
   },
   "toc": {
    "nav_menu": {},
