--- a/算法/几种常用算法/动态规划.ipynb
+++ b/算法/几种常用算法/动态规划.ipynb
@@ -145,7 +145,7 @@
     "\n",
     "从这两点看，0/1背包问题跟动态规划没有半毛钱的关系啊。那这两者又是怎么联系起来的呢？我们通过二叉树将两者联系起来。  \n",
     "\n",
-    "二叉树是一种树，每个跟节点至多有两个子节点。  \n",
+    "二叉树是一种树，每个节点至多有两个子节点。  \n",
     "\n",
     "我们可以将0/1背包问题通过二叉树来表示：\n",
     "\n",
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +204,7 @@
       " < B , 30.0 , 40.0>\n",
       " < A , 35.0 , 10.0>\n",
       "Total value of tokens is 155.0\n",
-      "Wall time: 0 ns\n"
+      "Wall time: 1 ms\n"
      ]
     }
    ],
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -305,7 +305,7 @@
       " < B , 30.0 , 40.0>\n",
       " < A , 35.0 , 10.0>\n",
       "Total value of tokens is ()\n",
-      "Wall time: 7.99 ms\n"
+      "Wall time: 1e+03 µs\n"
      ]
     }
    ],
@@ -415,7 +415,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
